[package]
name = "simple_transaction_manager"
version = "0.1.0"
authors = ["Daniel Bloom <7810950-Daniel.Aaron.Bloom@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
cached = "0.23.0"

[dev-dependencies]
serde_json = "1.0"
rand = "0.8"